# news-scraper

./: .gitignore  README.md  article_manager.py  crawl.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
data/: articles.json
news/: pipelines.py  settings.py
news/spiders/: cnn.py  foxnews.py  nbcnews.py  newsspider.py
news_scraper/: __main__.py  cli.py  items.py  middlewares.py  pipelines.py  settings.py
news_scraper/extractors/: __init__.py  ap.py  base.py  bbc.py  cbs.py  cnn.py  foxnews.py  guardian.py  nbc.py  nyt.py
news_scraper/sinks/: __init__.py  base.py  jsonl.py  kafka.py  mongo.py
news_scraper/spiders/: __init__.py  aljazeera.py  apnews.py  bbc.py  cbsnews.py  cnn.py  foxnews.py  guardian.py  nbcnews.py  newsspider.py  nytimes.py  reuters.py  washingtonpost.py  wsj.py
tests/: README.md  __init__.py  run_extractor_tests.py  run_tests.py  smoke_test_extractors.py  test_crawl.py  test_items.py  test_newsspider.py  test_sinks.py  test_spiders.py
tests/cli/: test_cli_help.py  test_cli_invalid_spider.py  test_cli_no_rich_import.py
tests/extractors/: __init__.py  test_ap.py  test_bbc.py  test_cbs.py  test_cnn.py  test_foxnews.py  test_guardian.py  test_nbc.py  test_nyt.py
tests/fixtures/: README.md
tests/spiders/: test_bbc_is_article_url.py  test_cbs_is_article_url.py  test_is_article_page_jsonld.py
