[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-scraper"
version = "0.1.0"
description = "News scraper project with pluggable sinks (Scrapy-based)."
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Chris Rotondo" } ]
keywords = ["scrapy", "news", "scraper"]
license = { text = "MIT" }

dependencies = [
  "Scrapy>=2.11.0",
  "newspaper3k",
  "random-user-agent",
  "typer>=0.9.0",
]

[project.scripts]
news-scraper = "news_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["news_scraper*"]
exclude = ["tests*", "test_data*", "custom*"]

[project.optional-dependencies]
# Installable extras for optional sinks. These are not required for the core
# scraper but are needed if you enable the corresponding sink.
mongo = [
  "pymongo>=3.12"
]

kafka = [
  "kafka-python>=2.0.2",
  "confluent-kafka>=1.8.2"
]

rich = [
  "rich>=13.0.0",
]

dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
]

all = [
  "pymongo>=3.12",
  "kafka-python>=2.0.2",
  "confluent-kafka>=1.8.2",
  "rich>=13.0.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take a long time to run",
]

[tool.coverage.run]
source = ["news_scraper"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
